--- a/capstone/vegetableGame/templates/vegetableGame/game.html
+++ b/capstone/vegetableGame/templates/vegetableGame/game.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +7,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegetables & Fruits Game</title>
+    <link rel="stylesheet" href="{% static 'vegetableGame/style.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+        integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+        crossorigin="anonymous"></script>
+    <script defer src="main.js"></script>
 </head>
 <body>
-    <h1>{{ questions }}</h1>
+    <a href="{% url 'plants:index' %}">HomePage</a>
+    
+    {% for data in database %}
+    <h3>{{data.veggie_question}}</h3>
+    <h4>{{data.veggie_answer}}</h4>
+    <h5>{{data.answers}}</h5> 
+    {% endfor %}
+
+    <div id="app">
+        <select v-model="amount" name="amount" id="amount">
+            <option disabled value="">Number of Questions</option>
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="15">15</option>
+            <option value="20">20</option>
+        </select>
+        <button v-on:click="getQuiz">Generate Quiz</button>
+    </div>
+    <div class="quiz">
+        <div v-for="question of questions" class="question">
+            <div>
+
+            </div>
+        </div>
+    </div>
+    <article class="flashcard">
+        <input id="flashcard-1" type="checkbox" />
+        <label for="flashcard-1">
+          <section class="front">
+            Front of the flashcard!
+          </section>
+          
+          <section class="back">
+            Back of the flashcard!
+          </section>
+        </label>
+      </article>
 </body>
 </html>
