--- a/capstone/plants/templates/plants/index.html
+++ b/capstone/plants/templates/plants/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Food</title>
     <link rel="stylesheet" href="{% static 'plants/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
                 <a href="#">Home</a>
                 <a href="#">YouTube</a>
                 <a href="#">About</a>
-                <a href="#">Member Login</a>  
+                <a href="{% url 'login_user' %}">Member Login</a>  
                 <a href="#" class="fa fa-youtube"></a>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-instagram"></a>
@@ -27,7 +28,7 @@
     </div>
     
     <div class="gardenPic">
-        <h3 class="garden">Picture of Vegetables</h3>    
+        <h2 class="garden">Picture of Vegetables</h2>    
     </div>
 
     <div class="content">
@@ -49,6 +50,71 @@
         <section class="squareTwo">
 
         </section>
+    </div>
+
+    <div class="summary">
+        <h3>Summary about Fruits and Vegetables</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
+        <hr>
+        <img class="tree" src="https://v1.nitrocdn.com/qAtNdMnTmDOznHBvXGIRNAIJKdigGWIu/assets/static/source/rev-5d172c4/wp-content/uploads/2019/05/dwarf-orange-photo1.jpg" alt="Tree">
     </div>
     
     <script>
