--- a/capstone/plants/static/plants/style.css
+++ b/capstone/plants/static/plants/style.css
@@ -20,3 +20,31 @@
 .sticky + .content {
     padding-top: 102px;
 }
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+  
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  .fa-twitter {
+    background: none;
+    color:black;
+  }
+  
+  .fa-youtube {
+    background: none;
+    color:black;
+  }
+  
+  .fa-instagram {
+    background: none;
+    color:black;
+}
