--- a/capstone/vegetableGame/static/vegetableGame/style.css
+++ b/capstone/vegetableGame/static/vegetableGame/style.css
@@ -1,9 +1,4 @@
-@font-face {
-    font-family: 'Oswald';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/oswald/v36/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUZiYA.ttf) format('truetype');
-  }
+
   * {
     margin: 0px;
     padding: 0px;
@@ -11,7 +6,7 @@
   }
   html,
   body {
-    background: #333;
+    background: #43e9c2;
     border: 0px;
     width: 100%;
     height: 100%;
@@ -49,7 +44,6 @@
   }
   article.flashcard section {
     display: block;
-    font: 30px "Oswald", sans-serif;
     text-align: center;
     line-height: 400px;
     width: 100%;
