--- a/capstone/plants/templates/plants/index.html
+++ b/capstone/plants/templates/plants/index.html
@@ -19,7 +19,8 @@
                 <a href="#">Home</a>
                 <a href="#">YouTube</a>
                 <a href="#">About</a>
-                <a href="{% url 'login_user' %}">Member Login</a>  
+                <a href="{% url 'login_user' %}">Member Login</a>
+                <a href="{% url 'register' %}">Join Us</a>
                 <a href="#" class="fa fa-youtube"></a>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-instagram"></a>
@@ -32,10 +33,10 @@
     </div>
 
     <div class="content">
-        <section class="squareOne">
+        <section class="square1">
 
         </section>
-        <section class="play">
+        <section class="options">
             <p>Wanna Play?</p>
             <a href="{% url 'vegetableGame:veggieGameData' %}">CLICK ME</a>
         </section>
@@ -43,11 +44,11 @@
             <p>Learn More ---></p>
             <p>Quiz <---</p>
         </section>
-        <section class="learn">
+        <section class="options">
             <p>Fruits & Vegetables</p>
             <a href="#">CLICK ME</a>
         </section>
-        <section class="squareTwo">
+        <section class="square2">
 
         </section>
     </div>
@@ -114,7 +115,7 @@
         <hr>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, saepe.</p>
         <hr>
-        <img class="tree" src="https://v1.nitrocdn.com/qAtNdMnTmDOznHBvXGIRNAIJKdigGWIu/assets/static/source/rev-5d172c4/wp-content/uploads/2019/05/dwarf-orange-photo1.jpg" alt="Tree">
+        <img class="tree" src="/images/guessing-game.png" alt="Tree">
     </div>
     
     <script>
