--- a/Capstone_Project/plants/templates/plants/about.html
+++ b/Capstone_Project/plants/templates/plants/about.html
@@ -1,8 +1,7 @@
 {% extends 'plants/base.html' %}
 
-
 {% block plants %}
-<div class="about">
+<div>
     <article>
         <h1>Header {{ message }}</h1>
         <h3>About GoodFood</h3>
