--- a/Capstone_Project/users/templates/users/register.html
+++ b/Capstone_Project/users/templates/users/register.html
@@ -1,7 +1,7 @@
-{% extends 'plants/base.html' %}
+{% extends 'users/base.html' %}
 
-{% block plants %}
-<body class="register">
+{% block users %}
+<body class="loginregister">
     <div class="message">
         <section class="section1">
             <h5>Say Hello</h5>
@@ -27,6 +27,6 @@
                 <input type="submit" value="Register">
             </form>    
         </section>
-    </div>
+    </div>   
 </body>
 {% endblock %}
