--- a/Capstone_Project/users/templates/users/base.html
+++ b/Capstone_Project/users/templates/users/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoodFood-RealFood</title>
-    <link rel="stylesheet" href="{% static 'plants/style.css' %}">
+    <link rel="stylesheet" href="{% static 'users/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -48,7 +48,7 @@
             }
         }
     </script>
-    {% block plants %}
+    {% block users %}
     {% endblock %}
 </body>
 </html>
