--- a/Capstone_Project/vegetableGame/templates/vegetableGame/game.html
+++ b/Capstone_Project/vegetableGame/templates/vegetableGame/game.html
@@ -1,9 +1,41 @@
-{% extends 'plants/base.html' %}
+{% load static %}
 
-{% block plants %}
-<html class="html">
-<body class="vegetableGame">
-    {% for quiz in quiz_question %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GoodFood-RealFood</title>
+    <link rel="stylesheet" href="{% static 'vegetableGame/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Vue -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- Axios -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"
+        integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg=="
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="header" id="myHeader">
+      <h1>Header: {{ message }}</h1>
+      <div class="topNav">
+          <nav class="navBar">
+              <a href="{% url 'plants:index' %}">Home</a>
+              <a href="#">YouTube</a>
+              <a href="{% url 'plants:aboutPage' %}">About</a>
+              <a href="{% url 'login_user' %}">Member Login</a>
+              <a href="{% url 'register' %}">Join Us</a>
+              <a href="#" class="fa fa-youtube"></a>
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-instagram"></a>
+              <a href="#" class="fa fa-twitter"></a>
+          </nav>
+      </div>
+  </div>
+
+  {% for quiz in quiz_question %}
     <div>
       <h3>{{quiz.veggie_question}}</h3>
     </div>
@@ -13,30 +45,43 @@
     <div>
       <h3>{{quiz.veggie_answer}}</h3>
     </div>
-    {% endfor %}
+  {% endfor %}
 
-    <div id="generate">
-        <select v-model="amount" name="amount" id="amount">
-            <option disabled value="">Number of Questions</option>
-            <option value="5">5</option>
-            <option value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-        </select>
-        <button v-on:click="getQuiz">Generate Quiz</button>
-    </div>
+  <!-- <div id="generate">
+      <select v-model="amount" name="amount" id="amount">
+          <option disabled value="">Number of Questions</option>
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="15">15</option>
+          <option value="20">20</option>
+      </select>
+      <button v-on:click="getQuiz">Generate Quiz</button>
+  </div> -->
 
-    <article class="flashcard">
-        <input id="flashcard-1" type="checkbox" />
-        <label for="flashcard-1">
-          <section class="front">
-            Front of the flashcard!
-          </section>
-          <section class="back">
-            Back of the flashcard!
-          </section>
-        </label>
-      </article>
+  <article class="flashcard">
+    <input id="flashcard-1" type="checkbox" />
+    <label for="flashcard-1">
+      <section class="front">
+        Front of the flashcard!
+      </section>
+      <section class="back">
+        Back of the flashcard!
+      </section>
+    </label>
+  </article>
+  <script>
+      window.onscroll = function() {myFunction()};
+      
+      var header = document.getElementById("myHeader");
+      var sticky = header.offsetTop;
+      
+      function myFunction() {
+          if (window.pageYOffset > sticky) {
+          header.classList.add("sticky");
+          } else {
+          header.classList.remove("sticky");
+          }
+      }
+  </script>
 </body>
 </html>
-{% endblock %}
