--- a/Capstone_Project/plants/templates/plants/index.html
+++ b/Capstone_Project/plants/templates/plants/index.html
@@ -8,7 +8,7 @@
 
     <div class="content">
         <section class="square1">
-
+            <a href="{% url 'quizGame:index' %}">Game</a>
         </section>
         <section class="options">
             <p>Wanna Play?</p>
