--- a/Capstone_Project/plants/templates/plants/index.html
+++ b/Capstone_Project/plants/templates/plants/index.html
@@ -8,11 +8,11 @@
 
     <div class="content">
         <section class="square1">
-            <a href="{% url 'quizGame:index' %}">Game</a>
+            empty space
         </section>
         <section class="options">
             <p>Wanna Play?</p>
-            <a href="{% url 'vegetableGame:veggieGameData' %}">CLICK ME</a>
+            <a href="{% url 'quizGame:index' %}">CLICK ME</a>
         </section>
         <section class="options">
             <p>Learn More ---></p>
@@ -23,7 +23,7 @@
             <a href="{% url 'gardenPlot:index' %}">CLICK ME</a>
         </section>
         <section class="square2">
-
+            empty space
         </section>
     </div>
 
