--- a/Capstone_Project/users/templates/users/profile.html
+++ b/Capstone_Project/users/templates/users/profile.html
@@ -12,7 +12,7 @@
         </section>
         <section class="options">
             <p>Wanna Play?</p>
-            <a href="{% url 'vegetableGame:veggieGameData' %}">CLICK ME</a>
+            <a href="{% url 'quizGame:index' %}">CLICK ME</a>
         </section>
         <section class="options">
             <p>Learn More ---></p>
