--- a/Capstone_Project/users/templates/users/register.html
+++ b/Capstone_Project/users/templates/users/register.html
@@ -13,7 +13,7 @@
             {{error}}
             {% endif %}
             <h3>Join Us</h3>
-            <h5>Create Your Account, It's Free.</h5>
+            <h5>Create Your Account, It's Free & Educational.</h5>
             <form action="{% url 'register' %}" method="post">
                 {% csrf_token %}
                 <label for="username">Username</label>
