--- a/Capstone_Project/gardenPlot/templates/gardenPlot/index.html
+++ b/Capstone_Project/gardenPlot/templates/gardenPlot/index.html
@@ -35,13 +35,13 @@
         </div>
     </div>
 
-    <label>Choose a Fruit or Vegetable: </label>
+    <label id="app">Choose a Fruit or Vegetable: </label>
             <select multiple>
                 <option disabled v-for="fruit in fruits">Please select one</option>
-                <option>{{fruit}}</option>
-                <option>{{fruit}}</option>
-                <option>{{fruit}}</option>
-                <option>{{fruit}}</option>
+                <option>1: {{fruit}}</option>
+                <option>2: {{fruit}}</option>
+                <option>3: {{fruit}}</option>
+                <option>4: {{fruit}}</option>
             </select>
         <input type="submit" name="submit" id="submit">
 
@@ -50,38 +50,37 @@
         <h3>Select Fruits or Vegetable</h3>
         <p>Watch your seeds blossom into plants!</p>
 
-        <table id="app" class="innerplot">
+        <table class="innerplot">
         <tr class="row1">
-            <td>Spot1<img id="hangman-image" src="#"></td>
-            <td>Spot2<img id="hangman-image" src="#"></td>
-            <td>Spot3<img id="hangman-image" src="#"></td>
-            <td>Spot4<img id="hangman-image" src="#"></td>
-            <td>Spot5<img id="hangman-image" src="#"></td>
+            <td>Spot1<img id="hangman-image1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Hangman-6.png/60px-Hangman-6.png"></td>
+            <td>Spot2<img id="hangman-image2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Hangman-5.png/60px-Hangman-5.png"></td>
+            <td>Spot3<img id="hangman-image3" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Hangman-4.png/60px-Hangman-4.png"></td>
+            <td>Spot4<img id="hangman-image4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Hangman-3.png/60px-Hangman-3.png"></td>
+            <td>Spot5<img id="hangman-image5" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Hangman-2.png/60px-Hangman-2.png"></td>
         </tr>
         <tr class="row2">
-            <td>Spot6<img id="hangman-image" src="#"></td>
-            <td>Spot7<img id="hangman-image" src="#"></td>
-            <td>Spot8<img id="hangman-image" src="#"></td>
-            <td>Spot9<img id="hangman-image" src="#"></td>
-            <td>Spot10<img id="hangman-image" src="#"></td>
+            <td>Spot6<img id="hangman-image1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Hangman-6.png/60px-Hangman-6.png"></td>
+            <td>Spot7<img id="hangman-image2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Hangman-5.png/60px-Hangman-5.png"></td>
+            <td>Spot8<img id="hangman-image3" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Hangman-4.png/60px-Hangman-4.png"></td>
+            <td>Spot9<img id="hangman-image4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Hangman-3.png/60px-Hangman-3.png"></td>
+            <td>Spot10<img id="hangman-image5" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Hangman-2.png/60px-Hangman-2.png"></td>
         </tr>
         <tr class="row3">
-            <td>Spot11<img id="hangman-image" src="#"></td>
-            <td>Spot12<img id="hangman-image" src="#"></td>
-            <td>Spot13<img id="hangman-image" src="#"></td>
-            <td>Spot14<img id="hangman-image" src="#"></td>
-            <td>Spot15<img id="hangman-image" src="#"></td>
+            <td>Spot11<img id="hangman-image1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Hangman-6.png/60px-Hangman-6.png"></td>
+            <td>Spot12<img id="hangman-image2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Hangman-5.png/60px-Hangman-5.png"></td>
+            <td>Spot13<img id="hangman-image3" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Hangman-4.png/60px-Hangman-4.png"></td>
+            <td>Spot14<img id="hangman-image4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Hangman-3.png/60px-Hangman-3.png"></td>
+            <td>Spot15<img id="hangman-image5" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Hangman-2.png/60px-Hangman-2.png"></td>
         </tr>
         <tr class="row4">
-            <td>Spot16<img id="hangman-image" src="#"></td>
-            <td>Spot17<img id="hangman-image" src="#"></td>
-            <td>Spot18<img id="hangman-image" src="#"></td>
-            <td>Spot19<img id="hangman-image" src="#"></td>
-            <td>Spot20<img id="hangman-image" src="#"></td>
+            <td>Spot16<img id="hangman-image1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Hangman-6.png/60px-Hangman-6.png"></td>
+            <td>Spot17<img id="hangman-image2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Hangman-5.png/60px-Hangman-5.png"></td>
+            <td>Spot18<img id="hangman-image3" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Hangman-4.png/60px-Hangman-4.png"></td>
+            <td>Spot19<img id="hangman-image4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Hangman-3.png/60px-Hangman-3.png"></td>
+            <td>Spot20<img id="hangman-image5" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Hangman-2.png/60px-Hangman-2.png"></td>
         </tr>
     </table>
     </div>
-
     
     
     <script>
