--- a/Capstone_Project/quizGame/static/quizGame/style.css
+++ b/Capstone_Project/quizGame/static/quizGame/style.css
@@ -1,5 +1,5 @@
 /* Flashcard Styling */
-* {
+/* * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -80,7 +80,7 @@ article.flashcard section.back {
     height: 0%;
     font-weight: bold;
     font-size: 3em;
-}
+} */
 
 
 /* Header Styling */
@@ -138,4 +138,46 @@ article.flashcard section.back {
 #generate {
     text-align: center;
     padding: 1em;
+}
+
+
+/* Second Flashcard Game */
+.title {
+    text-align: center;
+    font-family: 'Lobster', cursive;
+}
+
+.term {
+    border: solid 5px black;
+    border-radius: 15px;
+    text-align: center;
+    width: 45%;
+    margin: auto;
+    margin-top: 100px;
+}
+
+.definition {
+    border: solid 5px black;
+    border-radius: 15px;
+    text-align: center;
+    width: 45%;
+    margin: auto;
+    margin-top: 100px;
+    display: none;
+}
+
+.button {
+    text-align: center;
+    margin-top: 100px;
+}
+
+button {
+    color: white;
+    background-color: rgb(83, 235, 83);
+    padding: 20px;
+    border-radius: 15px;
+}
+
+button:hover {
+    transform: scale(1.1);
 }
