--- a/Capstone_Project/plants/templates/plants/food_data.html
+++ b/Capstone_Project/plants/templates/plants/food_data.html
@@ -2,7 +2,10 @@
 
 {% block plants %}
 <div>
-    <h1>Text: {{text}}</h1>
+    <h4>Links: {{links}}</h4>
+    <br>
     <p>Parsed: {{parsed}}</p>
+    <br>
+    <p>Hints: {{hints}}</p>
 </div>
-{% endblock %}
+{% endblock %}''
