--- a/Capstone_Project/plants/templates/plants/index.html
+++ b/Capstone_Project/plants/templates/plants/index.html
@@ -8,6 +8,7 @@
 
     <div class="content">
         <section class="square1">
+            <a href="{% url 'plants:edamam' %}">open</a>
             empty space
         </section>
         <section class="options">
